--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <p>UNTITLEDPROJECT_HUB</p>
+    </header>
+    <main>
+        <table>
+            <tr>
+                <td data-link="../projects/alchemy.html">Project 1</td>
+                <td data-link="../projects/alchemy.html">Project 2</td>
+                <td data-link="../projects/alchemy.html">Project 3</td>
+            </tr>
+            <tr>
+                <td data-link="../projects/alchemy.html">Project 4</td>
+                <td data-link="../projects/alchemy.html">Project 5</td>
+                <td data-link="../projects/alchemy.html">Project 6</td>
+            </tr>
+        </table>
+    </main>
+    <script src="../js/index.js"></script>
 </body>
 </html>
