--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <table>
             <tr>
                 <td data-link="../projects/alchemy.html">Project 1</td>
-                <td data-link="../projects/alchemy.html">Project 2</td>
+                <td data-link="../projects/test.html">Project 2</td>
                 <td data-link="../projects/alchemy.html">Project 3</td>
             </tr>
             <tr>
